# misalignment-platform

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
backend/src/api/: app.py  dtos.py  routes_events.py  routes_metrics.py  routes_systems.py
backend/src/domain/: evaluations.py  events.py  interventions.py  metrics.py  policies.py  stakeholders.py  systems.py
backend/src/engine/: classification.py  evaluation.py  ingestion.py  scoring.py  services.py  workflows.py
backend/src/infra/: auth.py  config.py  db_models.py
backend/tests/: test_api_routes.py  test_domain_models.py  test_engine_pipeline.py
docs/: orchestration-spec.md
docs/orchestration/: spec.md
frontend/src/api/: client.ts
frontend/src/components/: IncidentTable.tsx  PolicyComplianceChart.tsx  ScoreCard.tsx
frontend/src/views/: IncidentPipeline.tsx  PolicyView.tsx  SystemOverview.tsx  TrendsView.tsx
frontend/tests/: components.test.tsx  views.test.tsx
sentinel/: Dockerfile  requirements.txt  sentinel.py
