[project]
name = "misalignment-platform"
version = "0.1.0"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0"
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
